--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"vscode": "^1.74.0"
 	},
 	"activationEvents": [],
-	"main": "./extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
